[gd_scene load_steps=8 format=3 uid="uid://cvthtu23rbyt1"]

[ext_resource type="Script" path="res://scripts/ball.gd" id="1_0jrmh"]
[ext_resource type="Texture2D" uid="uid://cv4b781oovecl" path="res://art/ball.svg" id="2_k4lud"]
[ext_resource type="AudioStream" uid="uid://c8aq1bug6tv3k" path="res://sounds/wall.wav" id="3_eqfa2"]
[ext_resource type="AudioStream" uid="uid://doldoxxnm2sbe" path="res://sounds/stick.wav" id="4_0nalm"]
[ext_resource type="AudioStream" uid="uid://c5apqyray8uii" path="res://sounds/failure.wav" id="5_23ye7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nvfr8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_k4lud")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_y4ns4"]
radius = 6.0

[node name="Ball" type="CharacterBody2D"]
motion_mode = 1
wall_min_slide_angle = 3.14159
script = ExtResource("1_0jrmh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nvfr8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y4ns4")

[node name="BounceWall" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_eqfa2")

[node name="BounceStick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_0nalm")

[node name="Failure" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_23ye7")

[node name="TimerFailure" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TimerFailure" to="." method="_on_timer_failure_timeout"]
